@@ -188,7 +188,7 @@
           <parallel>classes</parallel>
           <threadCount>4</threadCount>
           <perCoreThreadCount>true</perCoreThreadCount>
-          <argLine>-Djava.util.logging.config.file=${project.basedir}/src/test/resources/logging.properties</argLine>
+          <argLine>-Djava.util.logging.config.file=${project.basedir}/src/test/resources/logging.properties --enable-native-access=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -262,7 +262,7 @@
               <parallel>classes</parallel>
               <threadCount>4</threadCount>
               <perCoreThreadCount>true</perCoreThreadCount>
-              <argLine>-Djava.util.logging.config.file=${project.basedir}/src/test/resources/logging.properties</argLine>
+              <argLine>-Djava.util.logging.config.file=${project.basedir}/src/test/resources/logging.properties --enable-native-access=ALL-UNNAMED</argLine>
             </configuration>
           </plugin>
         </plugins>
@@ -275,6 +275,12 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.13.2</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-nop</artifactId>
+      <version>2.0.16</version>
       <scope>test</scope>
     </dependency>
     <dependency>
